# patriMoi

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: DatePicker.tsx  MonthSelector.tsx  NumInput.tsx  YearSelector.tsx
src/context/: DeviseContext.tsx  PochesContext.tsx
src/hooks/: useQuotes.ts
src/pages/: Dashboard.tsx  Depenses.tsx  Fiches.tsx  Parametres.tsx  ParisSportifs.tsx  Patrimoine.tsx  Salaires.tsx
src/pages/patrimoine/: InvestSettings.tsx  LivretsSection.tsx  PocheSection.tsx  modals.tsx  shared.tsx  types.ts
