[package]
name = "patrimoine-app"
version = "0.1.0"
description = "Suivi patrimoine, dépenses & fiches de paie"
authors = ["vous"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "http-all", "dialog-all", "shell-execute", "shell-open"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
